Previous commit I removed the negative widths, margins, and paddings to stop some elements overlapping.
Removed some of the fixed widths for now.

--- a/css/main.css
+++ b/css/main.css
@@ -58,8 +58,7 @@ body
 
 #goals
 {
-    display: block;
-    width: 25%;
+    display: inline-block;
 }
 
 a[aria-current="page"] {
